<resources>
    <string name="app_name">Respira CheckApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_sample">Mapa</string>
    <string name="pref_title_system_sync_settings">pref_title_system_sync_settings</string>
    <string name="pref_title_sync_frequency">pref_title_sync_frequency</string>
    <string name="pref_header_notifications">pref_header_notifications</string>
    <string name="pref_header_data_sync">pref_header_data_sync</string>
    <string name="pref_title_new_message_notifications">pref_title_new_message_notifications</string>
    <string name="pref_title_ringtone">Nuevas mensajes</string>
    <string name="pref_title_vibrate">pref_title_vibrate</string>
    <string name="title_activity_filter">title_activity_filter</string>
    <string name="title_activity_share">title_activity_share</string>
    <string name="title_activity_my_places">title_activity_my_places</string>
    <string name="pref_ringtone_silent">pref_ringtone_silent</string>
    <string name="title_activity_exercise">Ejercicio</string>
    <string name="activity_exercise_title">Detalles del ejercicio</string>
    <string name="title_activity_list_exercise">Lista de ejercicios</string>
    <string name="google_app_id">AIzaSyBJpZ1G9MbZGtJky-HQLHo_nUAaiIipFs8</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_myplaces">Mis sitios</string>
    <string name="menu_contact">Contactos</string>
    <string name="menu_searchnearplaces">Sitios cercanos</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_group_summary">Resumen</string>
    <string name="menu_history_exercise">Dashboard</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_environment_prediction">Previsión de contaminación</string>
    <string name="menu_group_config">Configuration</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_helpfeedback">Help and Feedback</string>
    <string name="textChildAnnotation">Nueva nota</string>
    <string name="textChildFilter">Filtro</string>
    <string name="textChildActivity">Nuevo ejercicio</string>
    <string name="textChildNewPlace">Nueva ubicación</string>
    <string name="title_activity_new_annotation">New Annotation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_exercise_list_slider">ExerciseListSliderActivity</string>
    <string name="textExerciseSubtitleTimeline">Timeline</string>
    <string name="ExerciseListTabResume">Inicio</string>
    <string name="ExerciseListTabRecommend">Recomendación</string>
    <string name="ExerciseListTabMyExercise">Mis ejercicios</string>
    <string name="ExerciseListTabFavorites">Favoritos</string>
    <string name="EditExerciseName">Name</string>
    <string name="EditExerciseDescription">Description (opcional)</string>
    <string name="EditExerciseDuration">Duración</string>
    <string name="EditExerciseMoreInformation">Otras informaciones</string>
    <string name="EditExerciseGroup">Grupo</string>
    <string name="EditExerciseSubgroup">Subgrupo</string>
    <string name="EditExerciseExerciseType">Tipo de ejercicio</string>
    <string name="EditExerciseOtherInfo">Otras informaciones</string>
    <string name="EditExerciseLabelData">Data</string>
    <string name="EditExerciseLabelHorario">Horario</string>
    <string name="EditExerciseLabelLocation">Localización</string>
    <string name="EditExerciseButtonSave">Guardar</string>
    <string name="EditExerciseButtonCancel">Cancelar</string>
    <string name="details_edit">Editar</string>
    <string name="details_share">Compartir</string>
    <string name="details_delete">Borrar</string>
    <string name="DeleteExerciseButtonOk">Si</string>
    <string name="DeleteExerciseButtonCancel">Cancelar</string>
    <string name="DeleteExerciseDescription">¿Confirma que desea eliminar el ejercício?</string>
    <string name="title_activity_edit_exercise">Editar ejercício</string>
    <string name="title_activity_delete_exercise">Borrar ejercicio</string>
    <string name="title_activity_share_exercise">Compartir ejercicio</string>
    <string name="ShareExerciseButtonOk">Compartir</string>
    <string name="ShareExerciseButtonCancel">Cancelar</string>
    <string name="ShareExerciseDescription">[CheckApp] Hice ejercicios para mejorar mi capacidad respiratória! </string>
    <string name="ShareExerciseTitle">Texto para compartir:</string>
    <string name="exerciseShare_title">Seleccione la aplicación para compartir:</string>
    <string name="details_hide">Ocultar</string>
    <string name="exerciseActivity_title">Ejercicios</string>
    <string name="EditExerciseLabelLocal">Localizacion</string>
    <string name="EditAnnotationLabelOtherInfo">Otras informaciones</string>
    <string name="EditExerciseLabelDuration">Duracion</string>
    <string name="EditExerciseLabelExercise">Ejercicio</string>
    <string name="EditExerciseLabelHour">hora</string>
    <string name="EditExerciseLabelMinute">minuto</string>
    <string name="EditAnnotationLabelRecord">Grabar voz o texto</string>
    <string name="EditAnnotationLabelBtnSave">Guardar</string>
    <string name="EditAnnotationLabelBtnCancel">Cancelar</string>
    <string name="contaminants_good">Bueno</string>
    <string name="contaminants_satisfactory">Satisfactorio</string>
    <string name="contaminants_moderately">Moderado</string>
    <string name="contaminants_poor">Arriesgado</string>
    <string name="contaminants_verypoor">Muy arriesgado</string>
    <string name="exerciseAdapter_ratio">Calificación</string>
    <string name="exerciseAdapter_ratioNoInfo">Ejercicio no calificado</string>
    <string name="textExerciseFragment0Title">Ambiente de Madrid</string>
    <string name="textExerciseFragment0SubtitleSensors">Contaminantes</string>
    <string name="textExerciseFragment0SubtitleLegend">Leyenda del mapa</string>
    <string name="ExerciseListTabTimeline">Linea del tiempo</string>
    <string name="menu_favorite">Ejercicios favoritos</string>
    <string name="menu_map">Mapa y sitios</string>
    <string name="month_january">Enero</string>
    <string name="month_february">Febrero</string>
    <string name="month_march">Marzo</string>
    <string name="month_april">Abril</string>
    <string name="month_may">Mayo</string>
    <string name="month_june">Junio</string>
    <string name="month_july">Julio</string>
    <string name="month_august">Agosto</string>
    <string name="month_september">Septiembre</string>
    <string name="month_octuber">Octubre</string>
    <string name="month_november">Noviembre</string>
    <string name="month_december">Diciembre</string>
    <string name="timeline_title_day">Día</string>
    <string name="title_activity_favorite">Ejercicios favoritos</string>
    <string name="action_legend">Leyendas</string>
    <string name="action_filter">Filtro de sitios</string>
    <string name="assign_timeline_mesage_empty_text">La description o video de la nota no pueden estar vazios. Por favor incluya alguna información</string>
    <string name="textExerciseFragment0SubtitleLevels">Escala de contaminación</string>
    <string name="textMainMeasureLowLevel">Bajo</string>
    <string name="textMainMeasureHighLevel">Elevado</string>
    <string name="conn_title">checkapp: %s</string>
    <string name="conn_connecting">Conectándose al servidor…</string>
    <string name="conn_disconnecting">Desconectando...</string>
    <string name="conn_online">En línea</string>
    <string name="conn_offline">Fuera de Línea</string>
    <string name="conn_empty_roster">No hay contactos para mostrar!</string>
    <string name="conn_reconnect">Reconectar en %d segundos.</string>
    <string name="conn_disconnected">Conexión cerrada</string>
    <string name="conn_no_network">Sin conexión de red</string>
    <string name="Global_Exit">Salida</string>
    <string name="Global_authenticate_first">Por favor, conéctarse antes</string>
    <string name="Global_JID_hint">user@users.checkapp.mobi</string>
    <string name="Global_JID_malformed">Verifique el formato de la dirección!</string>
    <string name="StartupDialog_Title">¡Bienvenido/a a CheckApp!</string>
    <string name="StartupDialog_Summary">Necesita configurar checkapp antes de usarlo. Por favor, escribe su identidad de Jabber y su contaseña.</string>
    <string name="StartupDialog_pwHint">Escribe la contraseña</string>
    <string name="StartupDialog_pwrHint">Repeat password</string>
    <string name="StartupDialog_Username_title">Identidad Jabber:</string>
    <string name="StartupDialog_passwd_title">Contraseña:</string>
    <string name="StartupDialog_advanced">Delantero.....</string>
    <string name="StartupDialog_create_new">Registrar nueva cuenta</string>
    <string name="StartupDialog_error_password">Password does not match!</string>
    <string name="notification_message">Mensaje de %s</string>
    <string name="notification_anonymous_message">Mensaje recibido</string>
    <string name="notification_error">Errores al enviar el mensaje!</string>
    <string name="preftitle_notify">Notificación de mensajes</string>
    <string name="led_title">LED parpadeante</string>
    <string name="led_summ">Parpadeo del LED al recibir un mensaje</string>
    <string name="vibr_title">Vibración</string>
    <string name="vibr_summ">Vibrar al recibir un mensaje</string>
    <string-array name="vibr_values_displayed">
        <item>Nunca</item>
        <item>Preferencias del sistema</item>
        <item>Siempre</item>
    </string-array>
    <string name="ringtone_title">Tono de aviso</string>
    <string name="ringtone_summ">Tono para mensajes entrantes</string>
    <string name="ticker_title">Vista previa de mensajes</string>
    <string name="ticker_summ">Mostrar remitente y mensaje en la barra de estado</string>
    <string name="preftitle_boot">Opciones de arranque</string>
    <string name="statuspopup_name">Ponga su estado</string>
    <string name="showOffline_summ">Mostrar siempre todos los contactos en la lista</string>
    <string name="showOffline_title">Mostrar contactos desconectados</string>
    <string name="enableGroups_summ">Arrange your contacts by their groups</string>
    <string name="enableGroups_title">Show contact groups</string>
    <string name="foregroundService_summ">Mantener checkapp en memoria para asegurar conexiones persistentes (servicio en primer plano)</string>
    <string name="foregroundService_title">Icono de barra de estado</string>
    <string name="preftitle_debug">Depuración</string>
    <string name="menu_chat">Chat</string>
</resources>