
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingBottom="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ShareExerciseTitle"
            android:id="@+id/textShareExerciseLabelTitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/ShareExerciseDescription"
            android:text="@string/ShareExerciseDescription"
            android:id="@+id/textShareExerciseLabelDescription"
            android:lines="5"
            android:textAlignment="textStart" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShareExerciseButtonOk"
                android:id="@+id/btnShareExerciseOk" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShareExerciseButtonCancel"
                android:id="@+id/btnShareExerciseCancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>