<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EditExerciseLabelExercise"
        android:id="@+id/textAssignExerciseSubtitle03" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextAssignExerciseDescription"
        android:layout_weight="1"
        android:hint="Informaciones sobre ejercicio"
        android:layout_gravity="center_horizontal" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EditExerciseLabelDuration"
        android:id="@+id/textAssignExerciseDuration" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout" >

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pickerAssignExerciseHour"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:orientation="horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EditExerciseLabelHour"
                android:id="@+id/textEditExerciseLabelHour"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pickerAssignExerciseMinute"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:orientation="horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EditExerciseLabelMinute"
                android:id="@+id/textEditExerciseLabelMin"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/EditExerciseOtherInfo"
            android:id="@+id/textAssignExerciseLabelDateTime" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxAssignExerciseDate"
                android:checked="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/EditExerciseLabelData"
                android:id="@+id/textAssignExerciseDate" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxAssignExerciseTime"
                android:checked="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/EditExerciseLabelHorario"
                android:id="@+id/textAssignExerciseTime" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox18"
                android:checked="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/EditExerciseLabelLocal"
                android:id="@+id/textAssignExerciseLocation" />
        </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/btnAssignExerciseSave" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/btnAssignExerciseCancel" />
    </LinearLayout>
</LinearLayout>
</ScrollView>